fixed bug with recieving duplicate fdbks

--- a/css/app.css
+++ b/css/app.css
@@ -1327,7 +1327,7 @@ animation-name: bounceInDown;
  
 .bounceIn-enter.bounceIn-enter-active,
 .bounceIn-leave {
-
+  
 }
 
 .control_panel {
@@ -1335,11 +1335,11 @@ animation-name: bounceInDown;
   bottom: -360px;
   right: -130px;
   padding: 10px 10px 10px 40px;
-  background-color: rgba(0, 0, 0, 0.68);
   display: inline;
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.51);
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.49);
+  background-color: rgba(0, 0, 0, 0.73);
 }
 
 .control_panel button {
@@ -1348,9 +1348,14 @@ animation-name: bounceInDown;
   padding: 4px 10px;
   border-radius: 4px;
   font-weight: 200;
-  border-style: none;
+  border: 1px solid #000000;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.7), inset 0 1px 0 rgba(255, 255, 255, 0.28);
 }
 
-.control_panel:active {
-  -moz-transform: scale(1.5 );
+.control_panel button:active {
+  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.7), 0 1px 0 rgba(255, 255, 255, 0.28);
+}
+
+.ui-draggable-dragging {
+  transform: scale(1.5);
 }
