--- a/css/app.css
+++ b/css/app.css
@@ -220,7 +220,8 @@ opacity: 1;
 
 
 .focus {
-  -webkit-transform: translateX(0%);
+  -webkit-transform: translateX(0%);.
+  -moz-transform: translateX(0%);
   opacity: 1;
 }
 
@@ -315,6 +316,7 @@ header .btn {
   -o-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
   -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
   background-color: #d4d5d4;
   -webkit-transform: translateY(0%);
   -moz-transform: translateY(0%);
@@ -433,7 +435,8 @@ header .btn {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-    -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
 }
 
 .second_nav {
@@ -1332,30 +1335,76 @@ animation-name: bounceInDown;
 
 .control_panel {
   z-index: 1000;
-  bottom: -360px;
-  right: -130px;
+  float: right;
   padding: 10px 10px 10px 40px;
   display: inline;
   border-radius: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.51);
+  border: 1px solid rgba(0, 0, 0, 0.38);
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.49);
-  background-color: rgba(0, 0, 0, 0.73);
+  background-color: rgba(255, 255, 255, 0.73);
+  
+  
+  -webkit-transition: all 200ms ease-in-out;
+  -moz-transition: all 200ms ease-in-out;
+  -ms-transition: all 200ms ease-in-out;
+  -o-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .control_panel button {
-  background-color: rgba(0, 0, 0, 0.74);
-  color: rgba(255, 255, 255, 0.72);
-  padding: 4px 10px;
-  border-radius: 4px;
   font-weight: 200;
-  border: 1px solid #000000;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.7), inset 0 1px 0 rgba(255, 255, 255, 0.28);
+  font-size: .8em;
+	background: rgb(46,46,46);
+	background: -moz-linear-gradient(top, rgba(46,46,46,1) 0%, rgba(34,34,34,1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(46,46,46,1)), color-stop(100%,rgba(34,34,34,1)));
+	background: -webkit-linear-gradient(top, rgba(46,46,46,1) 0%,rgba(34,34,34,1) 100%);
+	background: -o-linear-gradient(top, rgba(46,46,46,1) 0%,rgba(34,34,34,1) 100%);
+	background: -ms-linear-gradient(top, rgba(46,46,46,1) 0%,rgba(34,34,34,1) 100%);
+	background: linear-gradient(to bottom, rgba(46,46,46,1) 0%,rgba(34,34,34,1) 100%);
+	border: 1px solid #141414;
+	color: #bcbcbc;
+	display: inline-block;
+	margin: 0 5px;
+	padding:8px 14px;
+	text-decoration: none;
+	text-shadow:0 1px 0 rgba(0,0,0,.6);
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	box-shadow: 0 1px 2px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.2) inset;
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.2) inset;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2), 0 1px 0 rgba(255,255,255,.2) inset
 }
-
+.control_panel button:hover {
+		background: -webkit-gradient(linear, left top, left bottom, from(rgba(64,64,64,1)), to(rgba(47,47,47,1))) rgb(64,64,64);
+  background: -webkit-linear-gradient(top, rgba(64,64,64,1) 0%, rgba(47,47,47,1) 100%) rgb(64,64,64);
+  background: -moz-linear-gradient(top, rgba(64,64,64,1) 0%, rgba(47,47,47,1) 100%) rgb(64,64,64);
+  background: -ms-linear-gradient(top, rgba(64,64,64,1) 0%, rgba(47,47,47,1) 100%) rgb(64,64,64);
+  background: -o-linear-gradient(top, rgba(64,64,64,1) 0%, rgba(47,47,47,1) 100%) rgb(64,64,64);
+  background: linear-gradient(to bottom, rgba(64,64,64,1) 0%, rgba(47,47,47,1) 100%) rgb(64,64,64);
+  border-color: #222;
+		text-shadow:0 1px 0 rgba(0,0,0,.7);
+		color: #d0d0d0
+	}
 .control_panel button:active {
-  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.7), 0 1px 0 rgba(255, 255, 255, 0.28);
-}
+		background: -webkit-gradient(linear, left top, left bottom, from(#171717), to(rgba(40,40,40,1))) rgb(23,23,23);
+  background: -webkit-linear-gradient(top, #171717 0%, rgba(40,40,40,1) 100%) rgb(23,23,23);
+  background: -moz-linear-gradient(top, #171717 0%, rgba(40,40,40,1) 100%) rgb(23,23,23);
+  background: -ms-linear-gradient(top, #171717 0%, rgba(40,40,40,1) 100%) rgb(23,23,23);
+  background: linear-gradient(to bottom, #171717 0%, rgba(40,40,40,1) 100%) rgb(23,23,23);
+  color: #fff;
+		text-shadow:0 1px 0 rgba(0,0,0,.3);
+		box-shadow: 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(0,0,0,.8) inset;
+		-moz-box-shadow: 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(0,0,0,.8) inset;
+		-webkit-box-shadow: 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(0,0,0,.8) inset;
+	}
 
 .ui-draggable-dragging {
   transform: scale(1.5);
+  
+  -webkit-transition: none;
+  -moz-transition: none;
+  -ms-transition: none;
+  -o-transition: none;
+  transition: none;
 }
