--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,9 @@
 html, body {
   height: 100%;
   width: 100%;
-  background-color: #3c3c3c;
-  color: #dfdfdf;
+  background-color: #ffffff;
+  color: #676767;
+  font-weight: 200;
 }
 
 body {
@@ -324,6 +325,7 @@ header .btn {
   width: 100%;
   position: absolute;
   top: 40px;
+  z-index: 100;
 }
 
 .dropdown.opened {
@@ -437,6 +439,15 @@ header .btn {
   box-sizing: border-box;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
+}
+
+.profile_pic {
+  width: 80px;
+  height: 80px;
+  border-radius: 80px;
+  background: url(../images/profile.jpg) center -10px;
+  border: 4px solid #ffffff;
+  box-shadow: inset 0 -1px rgba(0, 0, 0, 0.46), inset 0 1px rgba(0, 0, 0, 0.37), 0 1px 4px rgba(0, 0, 0, 0.5);
 }
 
 .second_nav {
@@ -1335,20 +1346,31 @@ animation-name: bounceInDown;
 
 .control_panel {
   z-index: 1000;
-  float: right;
-  padding: 10px 10px 10px 40px;
+  position: relative;
+  top: 300px;
+  left: 20px;
+  padding: 10px 0 10px 40px;
   display: inline;
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.38);
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.49);
-  background-color: rgba(255, 255, 255, 0.73);
-  
-  
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.26);
+  background-color: rgba(255, 255, 255, 0.51);
+  opacity: .2;
+  -webkit-transform: translateZ(0), translate3d(0, 0, 0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+     
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+
+.control_panel:hover {
+  opacity: .9;
 }
 
 .control_panel button {
@@ -1400,8 +1422,8 @@ animation-name: bounceInDown;
 	}
 
 .ui-draggable-dragging {
-  transform: scale(1.5);
-  
+  transform: scale(1.1);
+  opacity: .9;
   -webkit-transition: none;
   -moz-transition: none;
   -ms-transition: none;
