--- a/partials/campaign_info.html
+++ b/partials/campaign_info.html
@@ -1,8 +1,8 @@
 <header class="app_header">
-  <button ng-click="toggleSidebar('left')" class="btn icon left"><i class="icon-menu"></i></button>
+  <button ng-click="toggleNavbar()" class="btn icon left"><i class="icon-menu"></i></button>
   <button ng-click="toggleSidebar('right')" class="btn right"> . . . </button>
   <h2 ng-bind="editCampaign.title"></h2>
-  <div class="dropdown closed">
+  <div class="closed">
     <ul>
       <li><a href="#campaign/{{viewCampaign.id}}">Campaign Overview</a></li>
       <li ng-click="togglePanel('social_accounts')">share!</li>
