--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -1,6 +1,7 @@
 <div class="animation_wrapper layer0">
     <header class="app_header">
       <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
+      <h1>@<span ng-bind="handle"></span></h1>
     </header>
   
     <div class="scroller_wrapper with_header_padding">
@@ -10,7 +11,7 @@
         <form ng-submit="createCampaign(new_campaign_title, handle_to_submit, is_local, new_campaign_locale, discoverable)">
           <label for="handle_select">Choose a handle</label>
           <select ng-model="handle" id="handle_select" ng-change="changeHandle()" >
-            <option ng-repeat="handle in handleList" ng-bind="handle" value="{{handle}}"></option>
+            <option ng-bind="handleList" value="{{handleList}}"></option>
             <option value="+">+ create new</option>
           </select>
           
@@ -30,8 +31,8 @@
         <div ng-if="edit_mode" ng-animate="{enter: 'bounceIn-enter'}" class="animated">
             <a class="btn" href="{{edit_link}}" ng-class="{disabled: disable_single_edit_buttons}">edit</a>
             <a class="btn" href="{{view_link}}"  ng-class="">view</a>
-            <!--<button class="btn" ng-click="deleteAnyListItems(selected_campaigns, activeCampaignList)">delete</button>-->
-            <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || archiveListItem(selected_campaigns, activeCampaignList)">archive</button>
+            <!--<button class="btn" ng-click="deleteAnyListItems(selected_campaigns, campaignList)">delete</button>-->
+            <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || archiveListItem(selected_campaigns, campaignList)">archive</button>
             <button class="btn" ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || duplicateMode(true, selected_campaigns)">duplicate</button>
         </div>
       </div>
@@ -41,7 +42,7 @@
           
           <label>Choose a handle</label>
           <select ng-model="temp_handle">
-            <option ng-repeat="handle in handleList">{{handle}}</option>
+            <option ng-bind="handleList"></option>
             <option disabled="true">no more available listening points</option>
           </select>
           <input type="text" name="temp_name" ng-model="temporary_duplicate.title" placeholder="Type a new name for this duplicated campaign."/>
@@ -51,17 +52,14 @@
         </form>
       </div>
       
-      <ul id="campaign_list" class="object_list" ui-sortable="sortableOptions">
-        
-        <li ng-repeat="campaign in activeCampaignList" ng-class="{selected : selected_campaigns.some(campaign.id)}">
+      <ul id="campaign_list" class="object_list">
+        <li ng-repeat="campaign in campaignList" ng-class="{selected : selected_campaigns.some(campaign.id)}">
           
-          <div class="handle right"><i class="icon-menu"></i></div>
           <div class="right new_counter" ng-if="campaign.newCounter != 0" ng-hide="edit_mode" ng-bind="campaign.newCounter"></div>
           <div class="left">
             <button class="checkbox" ng-click="selectCampaign('{{campaign.id}}')"></button>
           </div>
-          <a href="#/campaign/{{campaign.id}}/instances">
-            <small>@{{campaign.handle}}</small>
+          <a href="#/account/{{accountId}}/campaign/{{campaign.id}}/instances">
             <h2>{{campaign.title}}</h2>
           </a>
         </li>
@@ -73,7 +71,7 @@
       </button>
       <ul class="object_list" ng-show="view_archived == true">
         <li ng-repeat="campaign in archivedCampaignList">
-          <button class="btn right" ng-click="unarchiveListItem(campaign, activeCampaignList)">unarchive</button>
+          <button class="btn right" ng-click="unarchiveListItem(campaign, campaignList)">unarchive</button>
   
           <a href="#/campaign/{{campaign.id}}/instances">
             <small>@{{campaign.handle}}</small>
