--- a/partials/rewards.html
+++ b/partials/rewards.html
@@ -1,11 +1,11 @@
 <div class="animation_wrapper">
   <header class="app_header">
-    <button ng-click=toggleSidebar('right') class="btn icon left"><i class="icon-menu"></i></button>
+    <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
     <button ng-click="toggleEditMode()" class="btn right" ng-switch on="edit_mode">
       <span ng-switch-when="false">edit</span>
       <span ng-switch-when="true">done</span>
     </button>
-    <h1>{{title}}</h1>
+    <h1 ng-bind="title"></h1>
   </header>
   
   <div class="scroller_wrapper  with_header_padding">
