transitioning over to ui-route for routing. Navigation works, but creating campaigns and editing do not yet.

--- a/partials/campaign_reward_info.html
+++ b/partials/campaign_reward_info.html
@@ -17,7 +17,7 @@
       <dd ng-bind="viewReward.owner"></dd>
       
       <dt>Original Conversation:</dt>
-      <dd><a href="#/campaign/{{campaignId}}/instances/{{viewReward.instanceId}}" ng-bind="viewReward.instanceId"></a></dd>
+      <dd><a href="#/campaign/{{campaignId}}/conversations/{{viewReward.instanceId}}" ng-bind="viewReward.instanceId"></a></dd>
       
       <dt>Secret Code:</dt>
       <dd ng-bind="viewReward.passphrase"></dd>
