--- a/partials/campaign_contacts.html
+++ b/partials/campaign_contacts.html
@@ -1,6 +1,6 @@
 <div class="animation_wrapper">
   <header class="app_header">
-    <a href="#/campaign/{{campaignId}}/instances" class="btn icon left"><i class="icon-left-open"></i>back</a>
+    <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
     <button class="btn icon right" ng-click="toggleNavbar()"> . . . </button>
     <h1 ng-bind="title"></h1>
   </header>
