--- a/partials/campaign_nav.html
+++ b/partials/campaign_nav.html
@@ -1,9 +1,9 @@
 <nav class="campaign_nav dropdown" ng-if="campaignNav_true" ng-click="toggleNavbar()">
   <ul>
-    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/instances"">Conversation Feed <i class="icon-chat"></i></a></li>
-    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics"">Analytics <i class="icon-chart-bar"></i></a></li>
-    <li ng-hide="multipleViewCampaigns"><a href="#/campaign/{{campaignId}}/edit"">edit <i class="icon-pencil"></i></a></li>
-    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards"">rewards <i class="icon-trophy"></i></a></li>
-    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts"">contacts <i class="icon-at"></i></a></li>
+    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed <i class="icon-chat"></i></a></li>
+    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics <i class="icon-chart-bar"></i></a></li>
+    <li ng-hide="multipleViewCampaigns"><a href="#/campaign/{{campaignId}}/edit">edit <i class="icon-pencil"></i></a></li>
+    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">rewards <i class="icon-trophy"></i></a></li>
+    <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">contacts <i class="icon-at"></i></a></li>
   </ul>
 </nav>
