--- a/partials/edit.html
+++ b/partials/edit.html
@@ -4,7 +4,7 @@
 
 <section id="page_02" class="animation_wrapper">
   <header class="app_header">
-    <a href="#/campaign/{{buildCampaign.id}}/instances" class="btn icon left"><i class="icon-left-open"></i>cancel</a>
+    <a href="#/campaign/{{buildCampaign.id}}/conversations" class="btn icon left"><i class="icon-left-open"></i>cancel</a>
     <a ng-click='advanceStep()' ng-hide='currentStep >= (steps.length-1)' class="btn right">next<i class="icon-right-open"></i></a>
     <button ng-show='currentStep >= (steps.length-1)' class="btn right" ng-click="saveChanges()">Save Changes</button>
     <h2>Edit {{buildCampaign.title}}: Step {{steps[currentStep]+1}}</h2>
