--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -4,6 +4,7 @@
   <header class="app_header">
     <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
     <button class="btn icon right" ng-click="toggleNavbar()"> . . . </button>
+    <small ng-bind="campaignHandle"></small>
     <h1 ng-bind="campaignTitle"></h1>
   </header>
   
