--- a/partials/edit.html
+++ b/partials/edit.html
@@ -4,7 +4,7 @@
 
 <section id="page_02" class="animation_wrapper">
   <header class="app_header">
-    <a href="#/campaign/{{buildCampaign.id}}/conversations" class="btn icon left"><i class="icon-left-open"></i>cancel</a>
+    <a href="#/account/{{accountId}}/campaign/{{buildCampaign.id}}/conversations" class="btn icon left"><i class="icon-left-open"></i>cancel</a>
     <a ng-click='advanceStep()' ng-hide='currentStep >= (steps.length-1)' class="btn right">next<i class="icon-right-open"></i></a>
     <button ng-show='currentStep >= (steps.length-1)' class="btn right" ng-click="saveChanges()">Save Changes</button>
     <h2>Edit {{buildCampaign.title}}: Step {{steps[currentStep]+1}}</h2>
@@ -22,9 +22,6 @@
         <h3 ng-bind="buildCampaign.handle"></h3>
         <section ng-switch on='currentStep'>
             <div ng-switch-when='0'>
-              <label for="personal_message" ng-model="buildCampaign.message">Create a personal message for the recipient:</label>
-              <textarea id="personal_message" placeholder="(optional)"></textarea>
-              
               <div ng-include src="'partials/form_not_completed.html'"></div>
               <button ng-click="togglePanel('Create Question')" class="btn">+ New Question</button>
             </div>
@@ -32,6 +29,9 @@
             <form method="post" action="">
               
               <h3>Reward details:</h3>
+              
+              <label for="personal_message" ng-model="buildCampaign.message">Create a personal message for the recipient:</label>
+              <textarea id="personal_message" placeholder="(optional)"></textarea>
               
               <label for="title">Title:</label>
               <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title" />
