--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -7,19 +7,20 @@
     <div class="scroller_wrapper with_header_padding">
     <section class="scroller">
       
-      <div ng-show="new_mode">
+      <div ng-if="new_mode">
         <form ng-submit="createCampaign(new_campaign_title, handle_to_submit, is_local, new_campaign_locale, discoverable)">
+          
           <label for="handle_select">Choose a handle</label>
-          <select ng-model="handle" id="handle_select" ng-change="changeHandle()" >
-            <option ng-bind="handleList" value="{{handleList}}"></option>
-            <option value="+">+ create new</option>
+          <select id="handle_select" ng-model="handle_to_submit" ng-options="handleObj.handle as handleObj.handle for handleObj in handleList">            
           </select>
           
-          <label for="handle_text" ng-show="handle == '+'" ng-animate="'collapse'">New handle name:</label>
-          <input id="handle_text" ng-show="handle == '+'"ng-animate="'collapse'" class="inline" type="text" name="new_handle" placeholder="Try your twitter handle!" ng-model="handle_to_submit" />
+          <div ng-if="handle == '+'" ng-animate="'collapse'">
+            <label for="handle_text">New handle name:</label>
+            <input id="handle_text" class="inline" type="text" name="new_handle" placeholder="Try your twitter handle!" ng-model="handle_to_submit" />
+          </div>
           
           <label for="campaign_text">Name this campaign: <br /><small>(this is the public title for your feedback.)</small></label>
-          <input type="text" name="new_campaign_title" placeholder="eg. 'Crepes & Things Feedback'" ng-model="new_campaign_title"/>   
+          <input id="campaign_text" type="text" name="new_campaign_title" placeholder="eg. 'Crepes & Things Feedback'" ng-model="new_campaign_title"/>   
           <button class="btn" type="submit" ng-click="resetStep()">Continue</button>
           <button class="btn" ng-click="toggleNewMode()" type="button">cancel</button>
         </form>
@@ -40,10 +41,8 @@
       <div ng-show="duplicating_mode">
         <form ng-submit="duplicateCampaign(temp_name, temp_handle)">
           
-          <label>Choose a handle</label>
-          <select ng-model="temp_handle">
-            <option ng-bind="handleList"></option>
-            <option disabled="true">no more available listening points</option>
+          <label for="handle_select_duplicate">Choose a handle</label>
+          <select id="handle_select_duplicate" ng-model="handle_to_submit" ng-options="handleObj.handle as handleObj.handle for handleObj in handleList">            
           </select>
           <input type="text" name="temp_name" ng-model="temporary_duplicate.title" placeholder="Type a new name for this duplicated campaign."/>
           
@@ -53,7 +52,7 @@
       </div>
       
       <ul id="campaign_list" class="object_list">
-        <li ng-repeat="campaign in campaignList" ng-class="{selected : selected_campaigns.some(campaign.id)}">
+        <li ng-repeat="campaign in campaignTitleList" ng-class="{selected : selected_campaigns.some(campaign.id)}">
           
           <div class="right new_counter" ng-if="campaign.newCounter != 0" ng-hide="edit_mode" ng-bind="campaign.newCounter"></div>
           <div class="left">
