'All Campaigns' dashboard is now working.

--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -58,7 +58,7 @@
           <div class="left">
             <button class="checkbox" ng-click="selectCampaign('{{campaign.id}}')"></button>
           </div>
-          <a href="#/account/{{accountId}}/campaign/{{campaign.id}}/conversations">
+          <a href="#/account/{{campaign.account_id}}/campaign/{{campaign.id}}/conversations">
             <h2>{{campaign.title}}</h2>
           </a>
         </li>
