--- a/partials/inbox.html
+++ b/partials/inbox.html
@@ -4,8 +4,8 @@
 </header>
 <div class="scroller_wrapper  with_header_padding">
   <div class="scroller">
-    <ul class="instances" ng-repeat="campaign in campaignList">
-      <li ng-repeat="instance in campaign.instances" class="instance">
+    <ul class="conversations" ng-repeat="campaign in campaignList">
+      <li ng-repeat="conversation in campaign.conversations" class="instance">
         <aside class="btn_set vert">
           <button class="btn">!</button>
         </aside>
