--- a/partials/campaign_rewards.html
+++ b/partials/campaign_rewards.html
@@ -14,7 +14,7 @@
         <button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'open'}">Open</button><button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'closed'}">Closed</button>
       </div>
       
-      <div class="data_section row">
+<!--      <div class="data_section row">
         <figure class="data centered col-1-3">
           <div class="big_number">2</div>
           <figcaption>rewards open</figcaption>
@@ -23,11 +23,12 @@
           <li>No rewards are expiring this month.</li>
           <li>No rewards have been redeemed this month.</li>
         </ul>
-      </div>
+      </div>-->
       
-      <input type="text" ng-model="search_query" placeholder="search names or seacret codes"/>
+      <input type="text" ng-model="search_query" placeholder="search names or secret codes"/>
+      {{viewCampaign.rewards}}
       <ul class="object_list">
-        <li ng-repeat="reward in rewardsList | filter:search_query">
+        <li ng-repeat="reward in viewCampaign.rewards | filter:search_query">
           <button class="btn right" ng-click="claimReward(reward)" class="btn" ng-class="{claimed: reward.date_claimed != false}">redeem</button>
           <a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
             <h2 ng-bind="reward.title"></h2>
