cleaned up rewards editor

--- a/partials/edit.html
+++ b/partials/edit.html
@@ -36,8 +36,8 @@
               <label for="title">Title:</label>
               <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title" />
               
-              <label for="description">Description:</label>
-              <input type="text" name="description" ng-model="buildCampaign.reward.description" placeholder="Description"/>
+<!--              <label for="description">Description:</label>
+              <input type="text" name="description" ng-model="buildCampaign.reward.description" placeholder="Description"/>-->
               
               <label for="terms">Terms:</label>
               <input type="text" name="terms" ng-model="buildCampaign.reward.terms" placeholder="Terms and Conditions"/>
@@ -45,7 +45,7 @@
               <label for="date">Expiration Date:</label>
               <input type="date" name="expiration" ng-model="buildCampaign.reward.exp" placeholder="Expiration Date" />
             
-              <h3>How will this reward be redeemed?</h3>
+              <!--<h3>How will this reward be redeemed?</h3>
               <div>
                 <fieldset>
                   <input ng-model="reward_type" type="radio" name="reward_type" value="location" id="location_redemption"/>
@@ -72,7 +72,7 @@
                   <textarea placeholder="Put your message, along with any other instructions for redeeming this reward here. This includes any external links, or coupon codes."></textarea>
                 </fieldset>
                 
-              </div>
+              </div>-->
             
               <h3>Validity:</h3>
             
