--- a/css/app.css
+++ b/css/app.css
@@ -1,14 +1,17 @@
 html, body {
   height: 100%;
   width: 100%;
-  background-color: #ffffff;
   color: #676767;
   font-weight: 200;
+  background-color: #ffffff;
+  overflow: hidden;
 }
 
 body {
   overflow: hidden;
   font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  background: url(../images/blur_bg.jpg) no-repeat fixed #ffffff;
+  background-size: 100% 100%;
 }
 
 a {
@@ -31,7 +34,6 @@ dd:after {
 }
 
 #main_view {
-  background-color: #424242;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -47,6 +49,13 @@ dd:after {
   z-index: 100;
   overflow: hidden;
   height: 100%;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.41);
+  
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+     -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+      -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+       -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+          transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
 .page {
@@ -91,7 +100,7 @@ dd:after {
 }
 
 .dimmer.visible {
-  background-color: rgba(0, 0, 0, 0.5);
+  /*background-color: rgba(0, 0, 0, 0.5);*/
   width: 100%;
 }
 
@@ -446,6 +455,25 @@ header .btn {
   box-sizing: border-box;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
+  color: #f7f7f7;
+  letter-spacing: .1em;
+}
+
+.sidebar li {
+  opacity: 0;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.62);
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+  color: #cacaca;
+}
+
+.sidebar.visible li {
+  opacity: 1;
 }
 
 .profile_pic {
@@ -486,7 +514,24 @@ header .btn {
   display: none;
 
   padding: 10px;
-  background-color: #e8e8e8;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #c8c8c8;
+  -moz-box-shadow: 0 2px 6px black;
+  -webkit-box-shadow: 0 2px 6px black;
+  box-shadow: 0 2px 6px black;
+  color: #575757;
+  text-shadow: 0 1px 2px #ffffff;
+}
+
+.personal_pages {
+  z-index: 1;
+  width: 60%;
+  position: absolute;
+  display: none;
+
+  padding: 10px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -1019,9 +1064,10 @@ textarea {
 }
 
 .slide_right {
-  -webkit-transform: translateX(80%);
-  -moz-transform: translateX(80%);
-  transform: translateX(80%);
+  -webkit-transform: translateX(50%) scale(.4);
+  -moz-transform: translateX(50%) scale(.4);
+  transform: translateX(50%) scale(.4);
+  opacity: .6;
 }
 
 
