--- a/partials/campaign_contacts.html
+++ b/partials/campaign_contacts.html
@@ -11,7 +11,7 @@
       <input type="text" ng-model="search_query" placeholder="search names or seacret codes"/>
       <ul class="object_list">
         <li ng-repeat="contact in contactList | filter:search_query">
-          <a href="#/campaign/{{campaignId}}/contacts/{{contact.id}}"><h2 ng-bind="contact.name"></h2></a>
+          <a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts/{{contact.id}}"><h2 ng-bind="contact.name"></h2></a>
         </li>
       </ul>
     </section>
