--- a/partials/campaign_rewards.html
+++ b/partials/campaign_rewards.html
@@ -10,20 +10,12 @@
   <div class="scroller_wrapper with_header_padding">
     <section class="scroller">
       
-      <div class="btnset two_btns">
-        <button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'open'}">Open</button><button class="btn" ng-click="toggleRewardsList()" ng-class="{selected: rewardsView == 'closed'}">Closed</button>
+      <div class="btnset three_btns">
+        <button class="btn" ng-click="toggleRewardsList('open')" ng-class="{selected: rewardsView == 'open'}">Open</button>
+        <button class="btn" ng-click="toggleRewardsList('redeemed')" ng-class="{selected: rewardsView == 'closed'}">Redeemed</button>
+        <button class="btn" ng-click="toggleRewardsList('expired')">Expired</button>
       </div>
-      
-<!--      <div class="data_section row">
-        <figure class="data centered col-1-3">
-          <div class="big_number">2</div>
-          <figcaption>rewards open</figcaption>
-        </figure>
-        <ul class="data text col-2-3">
-          <li>No rewards are expiring this month.</li>
-          <li>No rewards have been redeemed this month.</li>
-        </ul>
-      </div>-->
+      <button type="button" ng-click="addRedeemedRewards()" class="btn">add redeemed</button>
       
       <input type="text" ng-model="search_query" placeholder="search names or secret codes"/>
       <ul class="object_list">
