--- a/partials/account.html
+++ b/partials/account.html
@@ -1,4 +1,1 @@
-<div class="dimmer" ng-click="toggleToolPanel()" ng-class="{visible: conversationDetailView == true}"></div>
-<div class="animation_wrapper layer1">
-  <ui-view>
-</div>
+<div ng-click="toggleToolPanel()" ng-class="{visible: conversationDetailView == true}" class="dimmer"></div><div class="animation_wrapper layer1"><ui-view></ui-view></div>
