--- a/app.jade
+++ b/app.jade
@@ -62,4 +62,4 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
     script(src='js/angular/appDirectives.js', type='text/javascript')
     script(src='js/angular/appFactories.js', type='text/javascript')
     script(src='js/angular/directives/ui-sortable.js', type='text/javascript')
-    script(src='js/angular/directives/ui-router.js', type='text/javascript')
+    script(src='js/angular/directives/ui-router_0.2.js', type='text/javascript')
