--- a/partials/instance.html
+++ b/partials/instance.html
@@ -48,8 +48,8 @@
       </div>
     </li>
   </ul>
-  <form ng-submit="addReply(newCommentText, instance.comments)" class="reply">
-    <button type="submit" class="btn send_reply"><i class="icon-paper-plane"></i></button>
+  <form ng-submit="addReply(newCommentText, instance.comments)" class="one_line">
+    <button type="submit" class="btn"><i class="icon-paper-plane"></i></button>
     <input type="text" name="new_comment" ng-model="newCommentText" placeholder="add a reply"/>
   </form>
 </article>
