--- a/css/app.css
+++ b/css/app.css
@@ -98,8 +98,8 @@ dd:after {
   width: 100%;
 }
 
-.dimmer.visible {
-  /*background-color: rgba(0, 0, 0, 0.5);*/
+.visible {
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
 }
 
@@ -287,7 +287,7 @@ opacity: 1;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  color: #2d2d2d;
+  color: #83949e;
 }
 
 .app_header > * {
@@ -583,7 +583,6 @@ nav a {
   height: 100%;
   width: 90%;
   right: -90%;
-  background-color: #f4f4f4;
   border-left: 1px solid #777777;
   
   -webkit-transition: all 200ms ease-in-out;
@@ -593,38 +592,40 @@ nav a {
   transition: all 200ms ease-in-out;
 }
 
+.tools_panel .scroller {
+  background: white;
+  padding: 0 10px;
+}
+
 .tools_panel.visible {
   right: 0;
 }
 
+.tools_panel .input[type=text] {
+  height: 0;
+}
+
 .tag_list {
-  text-align: right;
+  padding: 10px 0 0;
 }
 
 .tag {
-  padding: .3em 1.8em .3em .8em;
+  padding: .1em 1.8em .1em .8em;
   border: 1px solid #c8c8c8;
   border-radius: 4px;
-  margin: 2px;
+  margin: 4px;
   background-color: #ffffff;
   position: relative;
   
   height: 26px;
   line-height: 23px;
   font-size: 12px;
-  color: #555;
+  color: #809195;
   text-decoration: none;
-  text-shadow: 0 1px white;
-  background: #fafafa;
   border-width: 1px;
   border-style: solid;
   border-color: #dadada #d2d2d2 #c5c5c5;
-  border-radius: 3px;
-  background-image: -webkit-linear-gradient(top, #fcfcfc, #f0f0f0);
-  background-image: -moz-linear-gradient(top, #fcfcfc, #f0f0f0);
-  background-image: linear-gradient(to bottom, #fcfcfc, #f0f0f0);
-  -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.7), 0 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.7), 0 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
 }
 
 .tag .close_btn {
@@ -661,21 +662,12 @@ nav a {
   border-bottom-style: none;
 }
 
-form {
-  display: block;
-  margin: 0;
-}
-
-.tools_list dt {
-  font-weight: bold;
-}
-
 .form_response {
   background-color: #ffffff;
   padding: 20px 10px 10px;
   margin: 0;
   padding-left: 20px;
-  border-top: 1px solid #e7e7e7;
+  border-top: 1px none #e7e7e7;
   border-bottom: 1px solid #e7e7e7;
 }
 
@@ -683,14 +675,14 @@ form {
   margin: 10px 10px 60px;
   border: 2px solid #e6e7e6;
   background-color: #ffffff;
-  border-top-left-radius: 30px;
+  border-top-left-radius: 0px;
 }
 
 .instance h3 {
   font-weight: 200;
-  font-size: 1.6em;
+  font-size: 1.3em;
   display: block;
-  margin: 0;
+  margin: 10px 0 0;
 }
 
 .instance h4 {
@@ -743,34 +735,28 @@ form {
   padding: 10px 0;
 }
 
-form.reply {
+form.one_line {
   padding: 0;
   border-top: 1px solid #e6e6e6;
   width: 100%;
   position: relative;
 }
 
-form.reply input[type=text] {
-  border: none;
-  margin: 0;
-  margin-right: 4em;
-}
-
-form.reply input[type=text]::-moz-placeholder {
+form.one_line input[type=text]::-moz-placeholder {
   color: #aeaeae;
 }
 
-form.reply input[type=text]::-webkit-placeholder {
+form.one_line input[type=text]::-webkit-placeholder {
   color: #e6e6e6;
 }
 
-form.reply input[type=text]::placeholder {
+form.one_line input[type=text]::placeholder {
   color: #e6e6e6;
 }
 
-.btn.send_reply {
+form.one_line button[type=submit] {
   background-color: #ffffff;
-  color: #383838;
+  color: #669bbb;
   margin: 0;
   padding: 1em;
   width: 4em;
@@ -779,6 +765,31 @@ form.reply input[type=text]::placeholder {
   position: absolute;
   right: 0;
   padding: 1.4em;
+}
+
+form.one_line input[type=text] {
+  border: none;
+  margin: 0;
+  margin-right: 4em;
+}
+
+.tools_panel form.one_line {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.tools_panel form.one_line input[type=text] {
+  margin: 10px 0 0;
+  border: 1px solid #e4e5e4;
+  padding: .5em;
+}
+
+.tools_panel form.one_line button[type=submit] {
+  padding: .8em;
+  border: 1px solid #e4e4e4;
+  margin: 0;
+  font-weight: bold;
 }
 
 .reply p {
@@ -863,7 +874,6 @@ fieldset.padded {
   border-radius: 2px;
   font-size: .8em;
   border: 1px solid rgba(0, 0, 0, 0.17);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.14);
 }
 
 .btn.primary {
@@ -878,7 +888,7 @@ fieldset.padded {
 
 .btn.icon {
   background-color: #ffffff;
-  color: #535352;
+  color: #83949e;
   border: none;
   padding: 2px 7px;
   box-shadow: none;
@@ -902,19 +912,19 @@ fieldset.padded {
 }
 
 .instance_header .left {
-  width: 60px;
+  width: 4em;
 }
 
 .instance_header .middle > * {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin: 0;
 }
 
 .instance_header {
   display: table;
   width: 100%;
+  overflow: visible;
   table-layout: fixed;
 }
 
@@ -931,12 +941,12 @@ fieldset.padded {
 .header_tools .btn {
   border: none;
   background: none;
-  color: #3d3d3d;
+  color: #83949e;
   box-shadow: none;
   display: table-cell;
   margin: 0;
-  height: ;
-  font-size: 1em;
+  height: 3em;
+  font-size: 1.2em;
   padding: .6em 1em;
   border-radius: 0;
 }
@@ -944,6 +954,7 @@ fieldset.padded {
 .instance_tools {
   border-bottom: 1px solid #e6e7e6;
   text-align: right;
+  padding: 5px 10px;
 }
 
 .instance_tools .btn {
@@ -951,7 +962,8 @@ fieldset.padded {
   margin: .4em;
   font-size: .9em;
   background-color: #ffffff;
-  color: #3c3d3c;
+  color: #83949e;
+  border-color: #83949e;
 }
 
 .heard {
@@ -1614,10 +1626,10 @@ animation-name: bounceInDown;
 .profile_pic {
   background: url(images/fdbk_mark.svg) no-repeat;
   background-size: 100%;
-  width: 50px;
-  height: 50px;
+  width: 2.8em;
+  height: 2.8em;
   border-radius: 30px;
-  margin: 0px 10px 0px 0px;
+  margin: 10px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px rgba(255, 255, 255, 0.74), inset 0 1px rgba(255, 255, 255, 0.34);
 }
