--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -1,21 +1,18 @@
-<div class="dimmer" ng-click="toggleToolPanel()" ng-class="{visible: conversationDetailView == true}"></div>
-  
+
 <div class="animation_wrapper layer1">
   <header class="app_header">
     <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
-    <button class="btn icon right" ng-click="toggleNavbar()"> . . . </button>
-    <small ng-bind="campaignHandle"></small>
+    <button ng-click="toggleNavbar()" class="btn icon right"> . . . </button><small ng-bind="campaignHandle"></small>
     <h1 ng-bind="campaignTitle"></h1>
   </header>
-  
-  <nav class="campaign_nav dropdown" ng-if="campaignNav_true" ng-click="toggleNavbar()">
+  <nav ng-if="campaignNav_true" ng-click="toggleNavbar()" class="campaign_nav dropdown">
     <ul>
-      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed <i class="icon-chat"></i></a></li>
-      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics <i class="icon-chart-bar"></i></a></li>
-      <li ng-hide="multipleViewCampaigns"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">edit <i class="icon-pencil"></i></a></li>
-      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">rewards <i class="icon-trophy"></i></a></li>
-      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">contacts <i class="icon-at"></i></a></li>
+      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
+      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
+      <li ng-hide="multipleViewCampaigns"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">edit<i class="icon-pencil"></i></a></li>
+      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">rewards<i class="icon-trophy"></i></a></li>
+      <li><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">contacts<i class="icon-at"></i></a></li>
     </ul>
   </nav>
-  <ui-view>
+  <ui-view></ui-view>
 </div>
