revamped dashboard and other small fixes.

--- a/jade_partials/campaign.html.jade
+++ b/jade_partials/campaign.html.jade
@@ -1,3 +1,4 @@
+.dimmer(ng-click='toggleToolPanel()', ng-class='{visible: conversationDetailView == true}')
 .animation_wrapper.layer1
   header.app_header
     button.btn.icon.left(ng-click='toggleSidebar(\'right\')')
