--- a/partials/account.html
+++ b/partials/account.html
@@ -1,5 +1,5 @@
 
-<div ng-click="toggleToolPanel()" ng-class="{visible: conversationDetailView == true}" class="dimmer"></div>
+<div ng-click="toggleSidebar()" ng-class="{visible: sidebar_visible}" class="dimmer"></div>
 <div class="animation_wrapper layer1">
   <ui-view></ui-view>
 </div>
