--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -1,4 +1,5 @@
 
+<div ng-click="toggleToolPanel()" ng-class="{visible: conversationDetailView == true}" class="dimmer"></div>
 <div class="animation_wrapper layer1">
   <header class="app_header">
     <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
