--- a/css/app.css
+++ b/css/app.css
@@ -429,20 +429,17 @@ header .btn {
   position: absolute;
   width: 100%;
   padding: 20px;
-  top: 0;
+  top: 10%;
   z-index: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  color: #f7f7f7;
   letter-spacing: .1em;
+  background-color: #ffffff;
 }
 
 .sidebar li {
   opacity: 0;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.62);
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   -webkit-transition: all 300ms ease-in-out;
@@ -450,7 +447,7 @@ header .btn {
   -ms-transition: all 300ms ease-in-out;
   -o-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
-  color: #cacaca;
+  color: #363636;
 }
 
 .sidebar.visible li {
@@ -1128,6 +1125,39 @@ fieldset.padded {
   clear: both;
 }
 
+.app_header .btn.primary {
+  background-color: #ffffff;
+  color: #c546ad;
+  border-color: #d35eac;
+  margin: .2em 0;
+  font-size: 1.5em;
+  line-height: 1.3rem;
+}
+
+.dashboard_toolbar {
+  display: table;
+  width: 100%;
+  border-top: 1px solid #cbcdcf;
+}
+
+.dashboard_toolbar .btn {
+  display: table-cell;
+  border: none;
+  border-radius: 0;
+  min-width: 33.3%;
+  padding: 1em 2em;
+  margin: 0;
+  line-height: 1em;
+  text-transform: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  appearance: button;
+  -moz-appearance: button;
+  background-color: #ffffff;
+  color: #6eb653;
+}
+
 /* @end */
 
 /* @group Question Type Selector Styles */
@@ -1191,10 +1221,11 @@ textarea {
 }
 
 .slide_right {
-  -webkit-transform: translateX(50%) scale(.4);
-  -moz-transform: translateX(50%) scale(.4);
-  transform: translateX(50%) scale(.4);
-  opacity: .6;
+  -webkit-transform: translateX(90%);
+  -moz-transform: translateX(90%);
+  transform: translateX(80%);
+  opacity: .9;
+  -webkit-fil
 }
 
 
