--- a/jade_partials/account.html.jade
+++ b/jade_partials/account.html.jade
@@ -1,3 +1,3 @@
-.dimmer(ng-click='toggleToolPanel()', ng-class='{visible: conversationDetailView == true}')
+.dimmer(ng-click='toggleSidebar()', ng-class='{visible: sidebar_visible}')
 .animation_wrapper.layer1
   ui-view
