--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -3,6 +3,7 @@
   <header class="app_header">
     <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
     <h1>@<span ng-bind="handle"></span></h1>
+    <button ng-click="edit_mode || toggleNewMode()" ng-if="!new_mode" ng-hide="edit_mode" ng-class="{disabled: edit_mode}" class="btn primary">+</button>
   </header>
   <div class="scroller_wrapper with_header_padding">
     <section class="scroller">
@@ -20,12 +21,6 @@
           <button type="submit" ng-click="resetStep()" class="btn">Continue</button>
           <button ng-click="toggleNewMode()" type="button" class="btn">cancel</button>
         </form>
-      </div>
-      <div class="toolbar">
-        <div ng-if="edit_mode" ng-animate="{enter: 'bounceIn-enter'}" class="animated"><a href="{{edit_link}}" ng-class="{disabled: disable_single_edit_buttons}" class="btn">edit</a><a href="{{view_link}}" ng-class="" class="btn">view</a>
-          <button ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || archiveListItem(selected_campaigns, campaignList)" class="btn">archive</button>
-          <button ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || duplicateMode(true, selected_campaigns)" class="btn">duplicate</button>
-        </div>
       </div>
       <div ng-show="duplicating_mode">
         <form ng-submit="duplicateCampaign(temp_name, temp_handle)">
@@ -56,7 +51,11 @@
             <h2>{{campaign.title}}</h2></a>
         </li>
       </ul>
-      <button ng-click="edit_mode || toggleNewMode()" ng-if="!new_mode" ng-hide="edit_mode" ng-class="{disabled: edit_mode}" class="btn primary full_width">+ New Campaign</button>
+      <div ng-if="edit_mode" class="dashboard_toolbar">
+        <!--a.btn(href='{{edit_link}}', ng-class='{disabled: disable_single_edit_buttons}') edit--><a href="{{view_link}}" ng-class="" class="btn">view</a>
+        <button ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || archiveListItem(selected_campaigns, campaignList)" class="btn">archive</button>
+        <button ng-class="{disabled: disable_single_edit_buttons}" ng-click="disable_single_edit_buttons || duplicateMode(true, selected_campaigns)" class="btn">duplicate</button>
+      </div>
     </section>
   </div>
 </div>
